--- a/index.css
+++ b/index.css
@@ -69,6 +69,8 @@ body {
 
     margin: 130px auto 0 auto;
 
+    border: 0;
+    outline: 0;
     cursor: pointer;
     position: absolute;
     top: 50%;
